Install awscli via brew

--- a/config.yml
+++ b/config.yml
@@ -20,6 +20,7 @@ dotfiles_files:
 
 homebrew_installed_packages:
   # - ansible # Installed via Pip.
+  - awscli
   - autoconf
   - bash-completion
   - doxygen
