--- a/config.yml
+++ b/config.yml
@@ -58,6 +58,7 @@ homebrew_taps:
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
   - autodmg
+    autopkgr
   - balenaetcher
   - chromedriver
   - cyberduck
