--- a/config.yml
+++ b/config.yml
@@ -58,7 +58,7 @@ homebrew_taps:
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
   - autodmg
-    autopkgr
+  - autopkgr
   - balenaetcher
   - chromedriver
   - cyberduck
