--- a/config.yml
+++ b/config.yml
@@ -53,6 +53,7 @@ homebrew_taps:
   - homebrew/core
   - homebrew/cask
   - homebrew/cask-fonts
+  - domt4/autoupdate
   - sambadevi/powerlevel9k
 
 homebrew_cask_appdir: /Applications
